2004-02-06  Martin Wehner  <martin.wehner@epost.de>

	* src/file-manager/fm-directory-view.c (rename_file_callback):
	Don't crash when trying to rename empty selection. Fixes bug #131861.

=== nautilus 2.4.2 ===

2004-02-02  Dave Camp  <dave@ximian.com>

	* src/Makefile.am: Removed DISABLE_DEPRECATED flags.
	* NEWS: 
	* configure.in: Bumped version to 2.4.2

2004-01-05  Martin Wehner  <martin.wehner@epost.de>

	* libnautilus-private/nautilus-icon-container.c:
	(icon_destroy): Nullify stretch_icon when the icon being
	pointed to is removed. Fixes bug #128713.

2004-01-04  Martin Wehner  <martin.wehner@epost.de>

	* libnautilus-private/nautilus-file-operations-progress.[ch]:
	Use GnomeVFSFileSize instead of gulong to store file sizes.
	Prevents an overflow with transfers > 4GB. Fixes bug #96734.
	
2004-01-02  Martin Wehner  <martin.wehner@epost.de>

	* libnautilus-private/nautilus-file-operations.c:
	Ensure the source isn't deleted as partial copy
	in a duplicate operation. Fixes bug #128095. 

2003-11-20  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c: (button_press_callback): Grab
	focus if clicking on a selected row.  Patch from Sivaiah 
	Nallagatla <snallagatla@novell.com>

2003-11-17  Dave Camp  <dave@ximian.com>

	* components/emblem/nautilus-emblem-view.c:
	(nautilus_emblem_view_drag_received_cb): NULL out the keyword
	fields.  Patch from Kiran Kumar Immidi <kimmidi@novell.com>.

2003-11-16  Dave Camp  <dave@ximian.com>
 
        * libnautilus-private/nautilus-file.c:
        (compare_by_modification_time): Don't compare unknown
        modification times.  Patch from Sivaiah Nallagatla
        <snallagatla@novell.com>.
 
2003-11-16  Dave Camp  <dave@ximian.com>
 
        * src/file-manager/fm-directory-view.c:
        (activate_activation_uri_ready_callback),
        (fm_directory_view_activate_file): Reread the activation URI of
        symlinks in case the link target is stale.  Patch from
        Maneesh Pusalkar <mpusalkar@novell.com>.
