@@ -1,3 +1,8 @@
+2004-02-11  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/file-manager/fm-directory-view.c (rename_file_callback):
+	Fix a potential leak in my last commit.
+
 2004-02-06  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-directory-view.c (rename_file_callback):
